# esp32_mp3

./: .gitignore  CMakeLists.txt  build_instructions.txt
components/fs_module/: CMakeLists.txt  fs.c  fs.h
components/input_module/: CMakeLists.txt  input.c  input.h
main/: CMakeLists.txt  main.c
